# modelo-mundial

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  digest.yml
artifacts/: online_state.json  pool_weights.json  predictions_log.parquet
artifacts/models/: README.md
artifacts/plots/: README.md
artifacts/reports/: README.md  backbone_sweep_20260615.txt  backtest_baseline_20260615.txt  backtest_tuned_20260615.txt  model_improvement_2026-06-15.md
data/reference/: bracket_2026.json  city_altitudes.csv  groups_2026.json  venues_2026.csv
docs/: ARCHITECTURE.md
memory/: README.md
memory/business_context/: 2026-06-15-model-improvement.md
notebooks/: 00_template.ipynb  01_eda_diagnostics.py  02_eda_diagnostics_v2.py  03_improvement_experiments.py  04_backbone_sweep.py
reports/: cycle_2026-06-11.md  cycle_2026-06-15.md  cycle_2026-06-16.md  cycle_2026-06-17.md  cycle_2026-06-18.md  cycle_2026-06-19.md  cycle_2026-06-20.md  cycle_2026-06-21.md  cycle_2026-06-22.md  cycle_2026-06-23.md  cycle_2026-06-24.md  cycle_2026-06-25.md  cycle_2026-06-26.md  cycle_2026-06-27.md  cycle_2026-06-28.md  cycle_2026-06-29.md  cycle_2026-06-30.md  cycle_2026-07-01.md  sim_2026-06-11.csv  sim_2026-06-15.csv  sim_2026-06-16.csv  sim_2026-06-17.csv  sim_2026-06-18.csv  sim_2026-06-19.csv  sim_2026-06-20.csv  sim_2026-06-21.csv  sim_2026-06-22.csv  sim_2026-06-23.csv  sim_2026-06-24.csv  sim_2026-06-25.csv  sim_2026-06-27.csv  sim_2026-06-28.csv  sim_2026-06-29.csv  sim_2026-06-30.csv  sim_2026-07-01.csv  v2_scoreline_upgrade_2026-06-22.md
scripts/: cloud_digest.py  predict_next.py
tests/: conftest.py  test_baseline.py  test_bayes.py  test_footy_odds.py  test_metrics.py  test_online.py  test_phase3.py  test_simulate.py  test_update_cycle.py
(+25 files in other folders)
