[project]
name = "mundial"
version = "0.1.0"
description = "World Cup 2026 match-outcome prediction system"
requires-python = ">=3.11"
dependencies = [
    "jax[cpu]",
    "numpyro",
    "lightgbm",
    "polars",
    "duckdb",
    "scikit-learn",
    "scipy",
    "pandas",
    "pyarrow",
    "matplotlib",
    "requests",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
