[project]
name = "mundial"
version = "0.1.0"
description = "World Cup 2026 match-outcome prediction system"
requires-python = ">=3.11"
dependencies = [
    "jax[cpu]",
    "numpyro",
    "lightgbm",
    "polars",
    "duckdb",
    "scikit-learn",
    "scipy",
    "pandas",
    "pyarrow",
    "matplotlib",
    "requests",
    "openpyxl",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# F (real errors), I (imports), UP (py-version upgrades), B (likely bugs).
# The codebase uses a deliberate compact style (semicolon-paired vectorized
# assignments), so the stylistic pycodestyle E rules are not enforced; B023/
# B905 are noisy loop/zip heuristics that here flag intentional patterns.
select = ["F", "I", "UP", "B"]
ignore = ["B023", "B905"]

[tool.mypy]
files = ["src/mundial"]
ignore_missing_imports = true
check_untyped_defs = true
